# hookify

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
core/: cache.py  config_loader.py  rule_engine.py
docs/plans/: 2026-05-03-hookify-design.md  2026-05-03-hookify-implementation.md  2026-05-03-spec-cwd-global-rules.md  2026-05-03-spec-json-cache.md
examples/: require-tests-stop.local.md
hooks/: posttooluse.py  pretooluse.py  stop.py  userpromptsubmit.py
tests/: conftest.py  test_cache.py  test_config_loader_cache.py  test_config_loader_global.py  test_config_loader_value_key.py  test_rule_engine_block.py  test_rule_engine_not_regex.py  test_rule_engine_userprompt_field_name.py  test_rule_engine_write.py
