[project]
name = "hookify"
version = "0.2.0"
description = "Patched fork of Anthropic's hookify Claude Code plugin with bug fixes and JSON rule caching"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anthropic", email = "support@anthropic.com"},
    {name = "Chris Irving"}
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["examples/", "agents/", "commands/", "skills/"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
